--- a/STM32/F303RE/F303RE.ioc
+++ b/STM32/F303RE/F303RE.ioc
@@ -2,60 +2,40 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-Dma.Request0=USART2_RX
-Dma.Request1=USART2_TX
-Dma.RequestsNb=2
-Dma.USART2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART2_RX.0.Instance=DMA1_Channel6
-Dma.USART2_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART2_RX.0.Mode=DMA_NORMAL
-Dma.USART2_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_RX.0.Priority=DMA_PRIORITY_LOW
-Dma.USART2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.USART2_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART2_TX.1.Instance=DMA1_Channel7
-Dma.USART2_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.USART2_TX.1.Mode=DMA_NORMAL
-Dma.USART2_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_TX.1.Priority=DMA_PRIORITY_LOW
-Dma.USART2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F303RET6
 Mcu.Family=STM32F3
-Mcu.IP0=DMA
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=USART2
+Mcu.IP0=NVIC
+Mcu.IP1=RCC
+Mcu.IP2=SYS
+Mcu.IP3=USB
+Mcu.IP4=USB_DEVICE
 Mcu.IPNb=5
 Mcu.Name=STM32F303R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB3
-Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin10=PA13
+Mcu.Pin11=PA14
+Mcu.Pin12=PB3
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin14=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA5
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
-Mcu.PinsNb=12
+Mcu.Pin8=PA11
+Mcu.Pin9=PA12
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303RETx
 MxCube.Version=6.13.0
 MxDb.Version=DB.6.0.130
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
-NVIC.DMA1_Channel6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel7_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
@@ -66,8 +46,13 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
-NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USB_HP_CAN_TX_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USB_LP_CAN_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PA11.Mode=Device
+PA11.Signal=USB_DM
+PA12.Mode=Device
+PA12.Signal=USB_DP
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -84,7 +69,6 @@ PA2.GPIO_Mode=GPIO_MODE_AF_PP
 PA2.GPIO_PuPd=GPIO_NOPULL
 PA2.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA2.Locked=true
-PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA3.GPIO_Label=USART_RX
@@ -92,7 +76,6 @@ PA3.GPIO_Mode=GPIO_MODE_AF_PP
 PA3.GPIO_PuPd=GPIO_NOPULL
 PA3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA3.Locked=true
-PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA5.GPIO_Label=LD2 [Green Led]
@@ -152,60 +135,66 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-LL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_DMA_Init-DMA-false-LL-true,4-MX_USART2_UART_Init-USART2-false-LL-true
-RCC.ADC12outputFreq_Value=72000000
-RCC.ADC34outputFreq_Value=72000000
-RCC.AHBFreq_Value=72000000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
+RCC.ADC12outputFreq_Value=48000000
+RCC.ADC34outputFreq_Value=48000000
+RCC.AHBFreq_Value=48000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=36000000
-RCC.APB1TimFreq_Value=72000000
-RCC.APB2Freq_Value=72000000
-RCC.APB2TimFreq_Value=72000000
-RCC.CortexFreq_Value=72000000
-RCC.FCLKCortexFreq_Value=72000000
+RCC.APB1Freq_Value=24000000
+RCC.APB1TimFreq_Value=48000000
+RCC.APB2Freq_Value=48000000
+RCC.APB2TimFreq_Value=48000000
+RCC.CortexFreq_Value=48000000
+RCC.FCLKCortexFreq_Value=48000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=72000000
+RCC.HCLKFreq_Value=48000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=8000000
 RCC.I2C1Freq_Value=8000000
 RCC.I2C2Freq_Value=8000000
 RCC.I2C3Freq_Value=8000000
-RCC.I2SClocksFreq_Value=72000000
+RCC.I2SClocksFreq_Value=48000000
 RCC.IPParameters=ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SClocksFreq_Value,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLP,PLLQ,RCC_PLLsource_Clock_Source_FROM_HSE,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
 RCC.LSI_VALUE=40000
-RCC.MCOFreq_Value=72000000
-RCC.PLLCLKFreq_Value=72000000
+RCC.MCOFreq_Value=48000000
+RCC.PLLCLKFreq_Value=48000000
 RCC.PLLM=8
-RCC.PLLMCOFreq_Value=72000000
-RCC.PLLMUL=RCC_PLL_MUL9
+RCC.PLLMCOFreq_Value=48000000
+RCC.PLLMUL=RCC_PLL_MUL6
 RCC.PLLN=336
 RCC.PLLP=RCC_PLLP_DIV4
 RCC.PLLQ=7
 RCC.RCC_PLLsource_Clock_Source_FROM_HSE=RCC_HSE_PREDIV_DIV2
 RCC.RTCFreq_Value=40000
 RCC.RTCHSEDivFreq_Value=250000
-RCC.SYSCLKFreq_VALUE=72000000
+RCC.SYSCLKFreq_VALUE=48000000
 RCC.SYSCLKSourceVirtual=RCC_SYSCLKSOURCE_PLLCLK
-RCC.TIM15Freq_Value=72000000
-RCC.TIM16Freq_Value=72000000
-RCC.TIM17Freq_Value=72000000
-RCC.TIM1Freq_Value=72000000
+RCC.TIM15Freq_Value=48000000
+RCC.TIM16Freq_Value=48000000
+RCC.TIM17Freq_Value=48000000
+RCC.TIM1Freq_Value=48000000
 RCC.TIM20Freq_Value=72000000
-RCC.TIM2Freq_Value=72000000
-RCC.TIM3Freq_Value=72000000
-RCC.TIM8Freq_Value=72000000
-RCC.UART4Freq_Value=36000000
-RCC.UART5Freq_Value=36000000
-RCC.USART1Freq_Value=72000000
-RCC.USART2Freq_Value=36000000
-RCC.USART3Freq_Value=36000000
-RCC.USBFreq_Value=72000000
+RCC.TIM2Freq_Value=48000000
+RCC.TIM3Freq_Value=48000000
+RCC.TIM8Freq_Value=48000000
+RCC.UART4Freq_Value=24000000
+RCC.UART5Freq_Value=24000000
+RCC.USART1Freq_Value=48000000
+RCC.USART2Freq_Value=24000000
+RCC.USART3Freq_Value=24000000
+RCC.USBFreq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-USART2.IPParameters=VirtualMode-Asynchronous
-USART2.VirtualMode-Asynchronous=VM_ASYNC
+USB_DEVICE.CLASS_NAME_FS=CUSTOM_HID
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,USBD_CUSTOM_HID_REPORT_DESC_SIZE,USBD_CUSTOMHID_OUTREPORT_BUF_SIZE
+USB_DEVICE.USBD_CUSTOMHID_OUTREPORT_BUF_SIZE=64
+USB_DEVICE.USBD_CUSTOM_HID_REPORT_DESC_SIZE=33
+USB_DEVICE.VirtualMode=CustomHid
+USB_DEVICE.VirtualModeFS=Custom_Hid_FS
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS.Mode=CUSTOM_HID_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 board=NUCLEO-F303RE
 boardIOC=true
